# saxion-eoq3-main

./: READ_ME.txt  app.py  db_items.py  model.py  pyproject.toml  sketch.txt
static/: create.css  home.css  quest.css  solve_murder.css  style.css  team_dash.css
templates/: apitest.html  change_password.html  create_team.html  home.html  inventory.html  quest_location.html  solve_murder.html  team_dashboard.html
